[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player/PlayerSprite.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Hitbox and Hurtbox/Hurtbox/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/WalkSheet.png" type="Texture" id=4]
[ext_resource path="res://Player/SpriteAttackSheet.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 173, 228 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 173, 0, 173, 228 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "WalkLeft",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 346, 0, 173, 228 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 519, 0, 173, 228 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "WalkRight",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 215, 212 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "AttackLeft",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 215, 0, 215, 212 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "AttackRight",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 2.38303
height = 3.17738

[sub_resource type="CapsuleShape2D" id=12]
radius = 3.17738
height = 7.94344

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.2589, 1.2589 )
collision_layer = 2
collision_mask = 129
script = ExtResource( 2 )
hp = 3

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3.97172 )
scale = Vector2( 0.0733841, 0.0733841 )
texture = ExtResource( 1 )
flip_h = true

[node name="AnimSprites" type="Node2D" parent="."]

[node name="WalkLeft" type="AnimatedSprite" parent="AnimSprites"]
visible = false
position = Vector2( -1.58869, -3.97172 )
scale = Vector2( 0.0728311, 0.0728311 )
frames = SubResource( 3 )
animation = "WalkLeft"
frame = 1
playing = true

[node name="WalkRight" type="AnimatedSprite" parent="AnimSprites"]
visible = false
position = Vector2( 0.794344, -3.97172 )
scale = Vector2( 0.0693874, 0.0693874 )
frames = SubResource( 6 )
animation = "WalkRight"
playing = true

[node name="AttackLeft" type="AnimatedSprite" parent="AnimSprites"]
visible = false
position = Vector2( -1.58869, -3.97172 )
scale = Vector2( 0.0648418, 0.0648418 )
frames = SubResource( 8 )
animation = "AttackLeft"
playing = true

[node name="AttackRight" type="AnimatedSprite" parent="AnimSprites"]
visible = false
position = Vector2( 2.38303, -3.97172 )
scale = Vector2( 0.0695255, 0.0695255 )
frames = SubResource( 10 )
animation = "AttackRight"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.54747e-13 )
scale = Vector2( 0.952503, 0.948815 )
shape = SubResource( 11 )

[node name="Shooter" type="Position2D" parent="."]
position = Vector2( 0, -3.17738 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -3.97172 )
shape = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]
